--- a/client.conf
+++ b/client.conf
@@ -1,8 +1,8 @@
 # Incoming address
 listen *:1194
 
-# Destination address
-forward localhost:1195
+## Destination address
+#forward localhost:1195
 
 # For every relay rule forward inbound packet to remote address using specified local address
 # Sequence number will be added to every packet
